--- a/gallery.css
+++ b/gallery.css
@@ -1,20 +1,25 @@
 /*As imagens estão a 4px de distância uma da outra*/
 
 .Título{
-    background-color: brown;
+    padding: 10px;
+    background-color: rgb(73, 52, 97);
 }
 
 .Título h1{
     text-align: center;
+    font-size: 60px;
+    color: white;
 }
 
 .images{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 800px;
-    height: 1500px;
-    background-color: blueviolet;
+    width: 829px;
+    height: 822px;
+    overflow: scroll;
+    overflow-x:hidden ;
+    /*background-color: blueviolet;*/
 }
 
 .inDiv img{
@@ -31,11 +36,5 @@
 }
 
 .inDiv{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-
-    width: 608px;
-    height: 1500px;
-    background-color: darkorange;
+   /* background-color: darkorange;*/
 }
