Titles are the same size

--- a/gallery.css
+++ b/gallery.css
@@ -1,48 +1,46 @@
 /*As imagens estão a 4px de distância uma da outra*/
 
-html{
+html {
     scroll-behavior: smooth
 }
 
-.TítuloG{
+.TítuloG {
     padding: 1px;
-    background-color: rgb(73, 52, 97);
+    /*background-color: rgb(73, 52, 97);*/
 }
 
-.TítuloG h1{
+.TítuloG h1 {
+    display: block;
     text-align: center;
     font-size: 40px;
-    color: white;
+    /*color: white;*/
 }
 
-.images{
-    
-    height: 822px;
+.images {
+    height: 950px;
     overflow: hidden;
-    background-color: blueviolet;
+    /*background-color: blueviolet;*/
+    width: 100%;
 }
 
-.inDiv img{
-    width:200px;
-    height:200px;
+.inDiv img {
+    width: 200px;
+    height: 200px;
     background-size: 100%;
     transition: 0.3s;
 }
 
-.inDiv img:hover{
-  -webkit-transform: scale3D(1.4,1.4,1.4);
-  -moz-transform: scale3D(1.4,1.4,1.4);
-  transform: scale3D(1.4,1.4,1.4);
+.inDiv img:hover {
+    -webkit-transform: scale(1.4, 1.4);
+    -moz-transform: scale(1.4, 1.4);
+    transform: scale(1.4, 1.4);
 }
 
-.images .inDiv{
-    display: block;
+.images .inDiv {
     margin-left: auto;
     margin-right: auto;
     width: 829px;
     height: 822px;
-    overflow: auto;
     overflow-x: hidden;
-    background-color: white;
+    background-color: orange;
 }
-
