--- a/about.css
+++ b/about.css
@@ -1,9 +1,11 @@
-.divAbout h1{
+.divAbout h1 {
     text-align: center;
+    font-size: 40px;
 }
 
-.divAbout{
+.divAbout {
+    display: block;
     height: 930px;
     overflow: hidden;
-    background-color: blueviolet;
+    /*background-color: blueviolet;*/
 }
