--- a/home.css
+++ b/home.css
@@ -1,79 +1,90 @@
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
 
-body{
-    margin:0;
+body {
+    margin: 0;
 }
 
 #navbar {
     overflow: hidden;
-    background-color:black;
+    background-color: black;
     float: left;
-    width:350px;
-  }
+    width: 350px;
+}
 
 #navbar a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
 }
 
 #navbar a:hover {
-  background-color: #ddd;
-  color: black;
+    background-color: #ddd;
+    color: black;
 }
 
 #navbar a.active {
-  background-color: #4CAF50;
-  color: white;
+    background-color: #4CAF50;
+    color: white;
 }
+
 .sticky {
     position: fixed;
     top: 0;
     width: 100%;
-  }
+}
 
-.titleName{
+.titleName {
     text-align: center;
     font-size: 100px;
-    display:block;
+    display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
-.intro{
+.intro {
     text-align: center;
     padding: 30px;
     background-color: #4CAF50;
 }
 
 .flexHome {
-	display: flex;
+    display: flex;
 }
 
+
 /* Flex Item */
-.itemHome{
+
+.itemHome {
     width: 400px;
     height: 400x;
-	margin: 5px;
+    margin: 5px;
     text-align: center;
     font-size: 1.5em;
     transition: 0.2s;
-    float:left;
+    float: left;
     background-image: url("drawings/World 1.png");
 }
 
-.itemHome:hover{
-    -webkit-transform: scale3D(1.4,1.4,1.4);
-    -moz-transform: scale3D(1.4,1.4,1.4);
-    transform: scale3D(1.4,1.4,1.4);
+.itemHome:hover {
+    -webkit-transform: scale3D(1.4, 1.4, 1.4);
+    -moz-transform: scale3D(1.4, 1.4, 1.4);
+    transform: scale3D(1.4, 1.4, 1.4);
 }
+
 .containerHome {
-    height: 700px;
+    height: 790px;
     width: 100%;
     margin-right: auto;
-    /*background-color: blue;*/
-
+    background-color: blue;
 }
-
