--- a/home.css
+++ b/home.css
@@ -6,6 +6,7 @@
     font-size: 100%;
     vertical-align: baseline;
     background: transparent;
+    overflow-x: hidden;
 }
 
 body {
@@ -17,6 +18,7 @@ body {
     background-color: black;
     float: left;
     width: 350px;
+    z-index:1;
 }
 
 #navbar a {
