--- a/gallery.css
+++ b/gallery.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /*As imagens estão a 4px de distância uma da outra*/
 
 html {
@@ -21,7 +20,6 @@ html {
     height: 950px;
     max-height: 950px;
     overflow: hidden;
-    background-color: blueviolet;
     width: auto;
 }
 
@@ -32,13 +30,14 @@ html {
     max-width: 200px;
     max-height: 200px;
     background-size: 100%;
-    transition: 0.3s;
+    transition: 0.6s;
 }
 
 .inDiv img:hover {
-    -webkit-transform: scale(1.4, 1.4);
+    opacity: 60%;
+    /*-webkit-transform: scale(1.4, 1.4);
     -moz-transform: scale(1.4, 1.4);
-    transform: scale(1.4, 1.4);
+    transform: scale(1.4, 1.4);*/
 }
 
 .images .inDiv {
@@ -50,64 +49,15 @@ html {
     max-width: 600px;
     max-height: 800px;
     overflow-x:hidden;
-    background-color: orange;
 }
 
 .inDiv {
     display: grid;
     grid-template-columns: auto auto auto;
-    background-color: #2196F3;
     padding: 10px;
   }
 
   .grid-image {
   background-color: rgba(255, 255, 255, 0.8);
   overflow: hidden;
-=======
-/*As imagens estão a 4px de distância uma da outra*/
-
-html {
-    scroll-behavior: smooth
-}
-
-.TítuloG {
-    padding: 1px;
-    /*background-color: rgb(73, 52, 97);*/
-}
-
-.TítuloG h1 {
-    display: block;
-    text-align: center;
-    font-size: 40px;
-    /*color: white;*/
-}
-
-.images {
-    height: 950px;
-    overflow: hidden;
-    /*background-color: blueviolet;*/
-    width: 100%;
-}
-
-.inDiv img {
-    width: 200px;
-    height: 200px;
-    background-size: 100%;
-    transition: 0.3s;
-}
-
-.inDiv img:hover {
-    -webkit-transform: scale(1.4, 1.4);
-    -moz-transform: scale(1.4, 1.4);
-    transform: scale(1.4, 1.4);
-}
-
-.images .inDiv {
-    margin-left: auto;
-    margin-right: auto;
-    width: 829px;
-    height: 822px;
-    overflow-x: hidden;
-    background-color: orange;
->>>>>>> 39b2d04025ef3d555127191df512dd56e8fac3e0
 }
