--- a/home.css
+++ b/home.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 * {
     margin: 0;
     padding: 0;
@@ -13,6 +12,8 @@
 body {
     margin: 0;
 }
+
+
 
 #navbar {
     overflow: hidden;
@@ -58,127 +59,51 @@ body {
 .intro {
     text-align: center;
     padding: 30px;
-    background-color: #4CAF50;
 }
 
-.flexHome {
-    display: flex;
+.homeContainer{
+    display:block;
+    height:890px;
+    max-height: 880px;
 }
 
+.homeContainer2{
+    position: relative;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    height:700px;
+    max-width: 100%;
+    margin: 50px;
+    padding: 40px;
+    
+}
 
-/* Flex Item */
+.child1,.child2,.child3{
+    position: relative;
+    height:650px;
+    max-height: 650px;
+    max-width: 600px;
+    background-size: 100%;
+    transition: 0.6s;background-size: 100%;
+    background-repeat: no-repeat;
+}
 
-.itemHome {
-    width: 400px;
-    height: 400x;
-    margin: 5px;
-    text-align: center;
-    font-size: 1.5em;
-    transition: 0.2s;
-    float: left;
+.child1{
+    background-image: url("drawings/Jetpack.png");
+}
+.child2{
+    background-image: url("drawings/BroChat.png");
+}
+.child3{
     background-image: url("drawings/World 1.png");
 }
 
-.itemHome:hover {
-    -webkit-transform: scale3D(1.4, 1.4, 1.4);
-    -moz-transform: scale3D(1.4, 1.4, 1.4);
-    transform: scale3D(1.4, 1.4, 1.4);
+.child1:hover,.child2:hover,.child3:hover{
+    transform: scale( 1.09,1.09);
 }
 
-.containerHome {
-    height: 790px;
+.link{
     width: 100%;
-    margin-right: auto;
-    background-color: blue;
-=======
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
-}
-
-body {
-    margin: 0;
-}
-
-#navbar {
-    overflow: hidden;
-    background-color: black;
-    float: left;
-    width: 350px;
-}
-
-#navbar a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-#navbar a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-#navbar a.active {
-    background-color: #4CAF50;
-    color: white;
-}
-
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-.titleName {
-    text-align: center;
-    font-size: 100px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.intro {
-    text-align: center;
-    padding: 30px;
-    background-color: #4CAF50;
-}
-
-.flexHome {
-    display: flex;
-}
-
-
-/* Flex Item */
-
-.itemHome {
-    width: 400px;
-    height: 400x;
-    margin: 5px;
-    text-align: center;
-    font-size: 1.5em;
-    transition: 0.2s;
-    float: left;
-    background-image: url("drawings/World 1.png");
-}
-
-.itemHome:hover {
-    -webkit-transform: scale3D(1.4, 1.4, 1.4);
-    -moz-transform: scale3D(1.4, 1.4, 1.4);
-    transform: scale3D(1.4, 1.4, 1.4);
-}
-
-.containerHome {
-    height: 790px;
-    width: 100%;
-    margin-right: auto;
-    background-color: blue;
->>>>>>> 39b2d04025ef3d555127191df512dd56e8fac3e0
+    height: 100%;
+    background-color:transparent;
 }
