--- a/home.css
+++ b/home.css
@@ -49,6 +49,7 @@ body {
 }
 
 .titleName {
+    padding-top: 30px;
     text-align: center;
     font-size: 100px;
     display: block;
@@ -58,14 +59,10 @@ body {
 
 .intro {
     text-align: center;
-    padding: 30px;
+    padding-top: 40px;
 }
 
-.homeContainer{
-    display:block;
-    height:890px;
-    max-height: 880px;
-}
+
 
 .homeContainer2{
     position: relative;
@@ -73,8 +70,18 @@ body {
     grid-template-columns: auto auto auto;
     height:700px;
     max-width: 100%;
-    margin: 50px;
-    padding: 40px;
+    padding: 30px;
+}
+
+.homeContainer2 a{
+    color: #ddd;
+    text-decoration: none;
+    
+}
+
+.homeContainer2 a:visited{
+    color: #ddd;
+    text-decoration: none;
     
 }
 
@@ -86,6 +93,7 @@ body {
     background-size: 100%;
     transition: 0.6s;background-size: 100%;
     background-repeat: no-repeat;
+    margin: 7px;
 }
 
 .child1{
@@ -103,7 +111,19 @@ body {
 }
 
 .link{
+    text-align: center;
     width: 100%;
     height: 100%;
-    background-color:transparent;
+    filter: alpha(opacity=0); opacity: 0;
+    background-color:black;
+    transition: 0.5s;
+}
+
+.link:hover{
+    opacity: 0.9;
+  filter: alpha(opacity=100);
+}
+
+.link p{
+    font-size: 60px;
 }
