--- a/writtings.css
+++ b/writtings.css
@@ -3,10 +3,8 @@
     height: 1080
 }
 
-.TítuloW {
-    padding: 10px;
-    /* background-color: rgb(199, 199, 199);*/
-}
+/*.TítuloW*/
+
 
 .TítuloW h1 {
     text-align: center;
@@ -14,33 +12,58 @@
     /*color: rgb(75, 75, 75)*/
 }
 
-.flex {
-    display: flex;
-}
-
-
-/* Flex Item */
-
-.item {
-    width: 400px;
-    height: 300px;
-    margin: 5px;
-    background: crimson;
-    text-align: center;
-    font-size: 1.5em;
-    transition: 0.2s;
-}
-
-.item:hover {
-    -webkit-transform: scale3D(1.4, 1.4, 1.4);
-    -moz-transform: scale3D(1.4, 1.4, 1.4);
-    transform: scale3D(1.4, 1.4, 1.4);
-}
-
-.container {
+.containerWrittings{
+    display: grid;
+    grid-template-columns: auto auto auto;
     height: 960px;
     width: 100%;
     margin-right: auto;
     margin-left: auto;
+    background-image: url("drawings/Stranded\ Jeremy.png");
     /*background-color: aqua;*/
+}
+
+
+
+.item1,.item2,.item3{
+    position: relative;
+    height:650px;
+    max-height: 650px;
+    max-width: 600px;
+    background-size: 100%;
+    transition: 0.6s;background-size: 100%;
+    background-repeat: no-repeat;
+    margin: 7px;
+}
+
+.item1{
+    background-image: url("drawings/Jetpack.png");
+}
+.item2{
+    background-image: url("drawings/BroChat.png");
+}
+.item3{
+    background-image: url("drawings/World 1.png");
+}
+
+.item1:hover,.item2:hover,.item3:hover{
+    transform: scale( 1.09,1.09);
+}
+
+.link{
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    filter: alpha(opacity=0); opacity: 0;
+    background-color:black;
+    transition: 0.5s;
+}
+
+.link:hover{
+    opacity: 0.9;
+  filter: alpha(opacity=100);
+}
+
+.link p{
+    font-size: 80px;
 }
