--- a/about.css
+++ b/about.css
@@ -5,7 +5,7 @@
 
 .divAbout {
     display: block;
-    height: 930px;
+    height: 100vh;
     overflow: hidden;
     background-color: rgb(143, 143, 143);
     background-image: url("drawings/Wiu.png");
