--- a/writtings.css
+++ b/writtings.css
@@ -15,7 +15,7 @@
 .containerWrittings{
     display: grid;
     grid-template-columns: auto auto auto;
-    height: 960px;
+    height: 100vh;
     width: 100%;
     margin-right: auto;
     margin-left: auto;
