--- a/css/global_layout.css
+++ b/css/global_layout.css
@@ -89,9 +89,17 @@ main{
 
 #about_section{
     background-color: #FF3CAC;
-background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
-
+    background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
     height: 100%;
+}
+
+.about_div{
+    background-color: rgb(204, 189, 172);
+    margin-left: auto;
+    margin-right: auto;
+    height: 100%;
+    width: 80vw;
+    max-width: 1000px;
 }
 
 footer{
