Added entries structure

--- a/css/global_layout.css
+++ b/css/global_layout.css
@@ -82,9 +82,16 @@ main{
 }
 
 #entries_section{
+    display: flex;
+    flex-wrap: wrap;
     background-color: #FF3CAC;
     background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
     height: 100%;
+    overflow-y: scroll;
+    justify-content: space-evenly;
+    overflow-x: hidden; /* Hide horizontal scrollbar */
+    padding-top: 14vh;
+    padding-bottom: 5vh;
 }
 
 #about_section{
