--- a/css/starbg.css
+++ b/css/starbg.css
@@ -3,6 +3,7 @@ html {
 }
 
 #stars {
+  z-index: -3;
   width: 1px;
   height: 1px;
   background: transparent;
@@ -187,6 +188,7 @@ html {
 }
 
 #stars:after {
+  z-index: -3;
   content: '';
   position: absolute;
   top: 2000px;
@@ -373,6 +375,7 @@ html {
 }
 
 #stars2 {
+  z-index: -3;
   width: 2px;
   height: 2px;
   background: transparent;
@@ -431,6 +434,7 @@ html {
 }
 
 #stars2::after {
+  z-index: -3;
   content: '';
   position: absolute;
   top: 2000px;
@@ -492,6 +496,7 @@ html {
 }
 
 #stars3 {
+  z-index: -3;
   width: 2px;
   height: 2px;
   background: transparent;
@@ -525,6 +530,7 @@ html {
 }
 
 #stars3::after {
+  z-index: -3;
   content: '';
   position: absolute;
   top: 2000px;
