--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,12 @@
 section div#aboutContainer {
-    height: 200px;
-    width: 200px;
+    height: 120%;
+    width: auto;
     background-color: azure;
+    margin: 0;
+}
+
+section div#aboutContainer div.textContainer{
+    background-color: brown;
+    margin: 0 auto;
+    width: 100%;
 }
