--- a/css/skills.css
+++ b/css/skills.css
@@ -1,7 +1,17 @@
 section div#skillsContainer {
     height: 100%;
     width: auto;
-    background-color: rgb(247, 238, 238);
+}
+
+div#skillsContainer .textContainer {
+    /* centralize vertically */
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+div#skillsContainer .textContainer p {
+  color: white;
 }
 
 /* Container for skill bars */
