--- a/css/skills.css
+++ b/css/skills.css
@@ -1,9 +1,24 @@
-section div#skillsContainer {
-    height: 100%;
+section#skills {
+    height: 120%;
     width: auto;
 }
 
-div#skillsContainer .textContainer {
+section#skills .titleContainer {
+    font-size: 100px;
+    font-family: blocpartyregular;
+    padding-top: 100px;
+    padding-left: 2rem;
+    color: aliceblue;
+}
+
+section#skills .separationBar {
+    background-color: aliceblue;
+    height: 5px;
+    width: 98%;
+    margin: 0 auto;
+}
+
+div#skillsContainer {
     /* centralize vertically */
     position: relative;
     top: 50%;
