--- a/css/global_layout.css
+++ b/css/global_layout.css
@@ -1,16 +1,3 @@
-@font-face{
-    font-family: amagro;
-    src: url(/resources/fonts/webfontkit-20201212-154923/amagro-bold-webfont.woff);
-}
-
-@font-face {
-    font-family: 'blocpartyregular';
-    src: url('/resources/fonts/blocParty/blocpartyregular-0wgep-webfont.woff2') format('woff2'),
-         url('/resources/fonts/blocParty/blocpartyregular-0wgep-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
 @font-face {
     font-family: 'dosis';
     src: url('/resources/fonts/dosis/Dosis-VariableFont_wght.woff') format('woff');
@@ -34,48 +21,79 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'lora';
+    src:  url('/resources/fonts/lora/Lora-VariableFont_wght.woff') format('woff'),
+          url('/resources/fonts/lora/Lora-VariableFont_wght.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    font-family: 'zillaSlab';
+    font-family: 'varelaRound';
+    font-size:  12pt;
 }
 
 html{
     background-color: rgb(31, 30, 30);
 }
 
-#willpineLogo {
+.splashContainer img{
+  margin: 0 auto;
+  width: 16rem;
+}
+
+.splashContainer {
     width: 100%;
-    height: auto;
+    max-width: 32rem;
+    margin: 0 auto;
+    background-color: black;
+    align-items: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+.sectionContainer {
+    width: 100%;
+    max-width: 32rem;
+    margin: 0 auto;
+    /* background-color: darkmagenta; */
+    align-items: center;
+    text-align: center;
+    margin-bottom: 2rem;
 }
 
 .titleContainer {
-    margin-left: auto;
-    margin-right: auto;
+  /* background-color: darkblue; */
+    margin-bottom: 1rem;
+    text-align: left;
+    margin-left: 2rem;
+    font-family: 'zillaSlab';
     font-size: 2rem;
-    padding-top: 100px;
-    padding-left: 2rem;
+    font-weight: bolder;
     color: white;
 }
 
 .separationBar {
     background-color: rgb(255, 255, 255);
-    /* height: 5px;
-    width: 8rem; */
     margin-left: 2rem;
 }
 
 .textContainer {
-    margin: 0 auto;
+    background-color: rgb(37, 36, 39);
     padding: 1.6rem;
     color:white;
-    background-color: rgb(37, 36, 39);
-    width: 23.0em;
-    border-radius: 3%;   
+    border-radius: 12px;   
     font-size: 1.2em;
-    letter-spacing: 2;
+    letter-spacing: 0.6;
+    width: 90%;
+    display: inline-block;
+    font-weight: 100;
 }
 
 footer{
