--- a/css/global_layout.css
+++ b/css/global_layout.css
@@ -34,12 +34,10 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    font-family: 'varelaRound';
-    font-size:  12pt;
 }
 
 html{
-    background-color: rgb(31, 30, 30);
+    background-color: rgb(0, 0, 0);
 }
 
 .splashContainer img{
@@ -75,7 +73,7 @@ html{
     margin-left: 2rem;
     font-family: 'zillaSlab';
     font-size: 2rem;
-    font-weight: bolder;
+    font-weight: 900;
     color: white;
 }
 
@@ -84,20 +82,30 @@ html{
     margin-left: 2rem;
 }
 
-.textContainer {
-    background-color: rgb(37, 36, 39);
+.subTitle{
+  /* color: red; */
+  font-family: 'zillaSlab';
+  font-weight: 900;
+  font-size: 1.4em;
+}
+
+.textContainer{
+    background-color: rgb(21, 23, 30);
     padding: 1.6rem;
     color:white;
     border-radius: 12px;   
-    font-size: 1.2em;
+    font-size: 1em;
     letter-spacing: 0.6;
     width: 90%;
     display: inline-block;
+    font-family: 'varelaRound';
+    letter-spacing: 0.4;
+    /* word-spacing: -4; */
     font-weight: 100;
 }
 
 footer{
-    background-color: rgb(136, 129, 130);
+    background-color: rgb(28, 26, 26);
     color: aliceblue;
     width: 100%;
     height: auto;
