--- a/css/global_layout.css
+++ b/css/global_layout.css
@@ -1,11 +1,4 @@
 @font-face {
-    font-family: 'dosis';
-    src: url('/resources/fonts/dosis/Dosis-VariableFont_wght.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
     font-family: 'varelaRound';
     src: url('/resources/fonts/varelaRound/VarelaRound-Regular.woff2') format('woff2'),
          url('/resources/fonts/varelaRound/VarelaRound-Regular.woff') format('woff');
@@ -13,23 +6,7 @@
     font-style: normal;
 }
 
-/* @font-face {
-    font-family: 'zillaSlab';
-    src: url('/resources/fonts/zillaSlab/ZillaSlab-Regular.woff2') format('woff2'),
-         url('/resources/fonts/zillaSlab/ZillaSlab-Regular.woff') format('woff');
-    font-weight: bolder;
-    font-style: normal;
-} */
-
 @import url('https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@700&display=swap');
-
-@font-face {
-    font-family: 'lora';
-    src:  url('/resources/fonts/lora/Lora-VariableFont_wght.woff') format('woff'),
-          url('/resources/fonts/lora/Lora-VariableFont_wght.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-}
 
 *{
     margin: 0;
@@ -40,23 +17,24 @@
 }
 
 html{
-    background-color: rgb(0, 0, 0);
+  background-color: black;
+  color: #ffffff;
 }
 
 .splashContainer img{
   margin: 0 auto;
-  width: 16rem;
+  width: 12rem;
 }
 
 .splashContainer {
     width: 100%;
     max-width: 32rem;
     margin: 0 auto;
-    background-color: black;
+    background-color: transparent;
     align-items: center;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    /* margin-bottom: 2rem; */
     text-align: center;
+    padding-top: 2rem;
 }
 
 .sectionContainer {
@@ -64,21 +42,20 @@ html{
     max-width: 32rem;
     margin: 0 auto;
     /* background-color: darkmagenta; */
-    align-items: center;
     text-align: center;
     margin-bottom: 2rem;
 }
 
 .titleContainer {
   /* background-color: darkblue; */
-    margin-bottom: 1rem;
+    margin-bottom: 0.2rem;
     text-align: left;
-    margin-left: 2rem;
+    margin-left: 1rem;
     font-family: 'Zilla Slab', serif;
-    font-size: 2.4rem;
-    font-weight: 600;
+    font-size: 3rem;
+    font-weight: 800;
     letter-spacing: 1;
-    color: white;
+    color: black;
 }
 
 .separationBar {
@@ -89,27 +66,32 @@ html{
 .subTitle{
   /* color: red; */
   font-family: 'Zilla Slab', serif;
-  font-weight: 600;
-  font-size: 1.4em;
+  font-weight: 700;
+  font-size: 1.6em;
 }
 
 .textContainer{
-    background-color: rgb(21, 23, 30);
-    padding: 1.6rem;
-    color:white;
-    border-radius: 12px;   
-    font-size: 1em;
-    letter-spacing: 0.6;
-    width: 90%;
-    display: inline-block;
-    font-family: 'varelaRound';
-    letter-spacing: 0.4;
-    /* word-spacing: -4; */
-    font-weight: 100;
+  background-color: rgb(0, 0, 0);
+  padding: 1.6rem;
+  letter-spacing: 0.6;
+  width: 95%;
+  display: inline-block;
+  
+  border: #ffffff;
+  border-style: groove;
+  border-width: 1px;
+  /* border-radius: 12px;    */
+
+  font-size: 1em;
+  font-family: 'varelaRound';
+  text-align: start;
+  letter-spacing: 0.4;
+  font-weight: 100;
+  /* word-spacing: -4; */
 }
 
 footer{
-    background-color: rgb(28, 26, 26);
+    background-color: black;
     color: aliceblue;
     width: 100%;
     height: auto;
