varelaRound added as a font

--- a/css/global_layout.css
+++ b/css/global_layout.css
@@ -100,4 +100,11 @@ footer{
 
 footer *{
     text-align: center;
+    font-family: varelaRound;
+    text-decoration: none;
+    margin-right: 1em;
+}
+
+footer a:visited{
+  color: aliceblue;
 }
