--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,29 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --background: #ffffff;
+  --foreground: #171717;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #0a0a0a;
+    --foreground: #ededed;
+  }
+}
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+}
+
 @font-face {
     font-family: 'varelaRound';
-    src: url('/resources/fonts/varelaRound/VarelaRound-Regular.woff2') format('woff2'),
-         url('/resources/fonts/varelaRound/VarelaRound-Regular.woff') format('woff');
+    src: url('./fonts/varelaRound/VarelaRound-Regular.woff2') format('woff2'),
+         url('./fonts/varelaRound/VarelaRound-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
