--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,20 +35,20 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    line-height: 1.6em;
+    /* line-height: 1.6em; */
 }
 
 html{
-  background-color: black;
+  background-color: #ffffff0;
   color: #ffffff;
 }
 
-.splashContainer img{
+.layoutContainer img{
   margin: 0 auto;
   width: 10rem;
 }
 
-.splashContainer {
+.layoutContainer {
     width: 100%;
     max-width: 32rem;
     margin: 0 auto;
@@ -59,14 +59,6 @@ html{
     padding-top: 2rem;
 }
 
-.sectionContainer {
-    width: 100%;
-    max-width: 32rem;
-    margin: 0 auto;
-    /* background-color: darkmagenta; */
-    text-align: center;
-    margin-bottom: 2rem;
-}
 
 .titleContainer {
   /* background-color: darkblue; */
@@ -96,12 +88,12 @@ html{
   background-color: rgb(0, 0, 0);
   padding: 1.6rem;
   letter-spacing: 0.6;
-  width: 95%;
+  width: 100%;
   display: inline-block;
   
-  border: #ffffff;
-  border-style: groove;
-  border-width: 1px;
+  /* border: #ffffff0; */
+  /* border-style: groove; */
+  /* border-width: 1px; */
   /* border-radius: 12px;    */
 
   font-size: 1em;
@@ -118,13 +110,13 @@ footer{
     width: 100%;
     height: auto;
     padding: 20px;
+    margin-top: 6rem;
 }
 
 footer *{
     text-align: center;
     font-family: varelaRound;
     text-decoration: none;
-    margin-right: 1em;
 }
 
 footer a:visited{
