--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -48,3 +48,34 @@ h1{
   letter-spacing: 1;
   color: black;
 }
+
+.layoutContainer{
+    width: 100%;
+    max-width: 32rem;
+    margin: 0 auto;
+    background-color: transparent;
+    align-items: center;
+    /* margin-bottom: 2rem; */
+    text-align: center;
+}
+
+.textContainer{
+  background-color: rgb(0, 0, 0);
+  padding: 1.6rem;
+  letter-spacing: 0.6;
+  width: 100%;
+  display: inline-block;
+  
+  /* border: #ffffff0; */
+  /* border-style: groove; */
+  /* border-width: 1px; */
+  /* border-radius: 12px;    */
+
+  color: white;
+  font-size: 1em;
+  font-family: 'varelaRound';
+  text-align: start;
+  letter-spacing: 0.4;
+  font-weight: 100;
+  /* word-spacing: -4; */
+}
