--- a/src/css/app/app.css
+++ b/src/css/app/app.css
@@ -3,16 +3,6 @@
   width: 10rem;
 }
 
-.layoutContainer{
-    width: 100%;
-    max-width: 32rem;
-    margin: 0 auto;
-    background-color: transparent;
-    align-items: center;
-    /* margin-bottom: 2rem; */
-    text-align: center;
-}
-
 
 .titleContainer {
   /* background-color: darkblue; */
@@ -26,33 +16,7 @@
     color: black;
 }
 
-.separationBar {
-    background-color: rgb(255, 255, 255);
-    margin-left: 2rem;
-}
-
-.subTitle{
-  /* color: red; */
-  font-family: 'Zilla Slab', serif;
-  font-weight: 700;
-  font-size: 1.6em;
-}
-
-footer{
-    background-color: black;
-    color: aliceblue;
-    width: 100%;
-    height: auto;
-    padding: 20px;
-    margin-top: 6rem;
-}
-
-footer *{
-    text-align: center;
-    font-family: varelaRound;
-    text-decoration: none;
-}
-
-footer a:visited{
-  color: aliceblue;
+.sectionContainer{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
