--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -20,6 +20,8 @@
   }
 }
 
+/* ---------- Fonts ---------- */
+
 @font-face {
     font-family: 'varelaRound';
     src: url('../fonts/varelaRound/VarelaRound-Regular.woff2') format('woff2'),
@@ -35,11 +37,9 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    /* line-height: 1.6em; */
 }
 
-html{
-}
+/* ---------- Global Titles ---------- */
 
 h1{
   font-family: 'Zilla Slab', serif;
@@ -49,15 +49,58 @@ h1{
   color: black;
 }
 
+h2{
+  font-family: 'Zilla Slab', serif;
+  font-size: 2rem;
+  font-weight: 600;
+  letter-spacing: 1;
+  color: black;
+}
+
+h3{
+  font-family: 'Zilla Slab', serif;
+  font-weight: 700;
+  font-size: 1.6em;
+  color:black;
+}
+
+
+/* ---------- Global Layout ---------- */
+
 .layoutContainer{
     width: 100%;
-    max-width: 32rem;
+    max-width: 64rem;
+    min-height: 90vh;
     margin: 0 auto;
     background-color: transparent;
     align-items: center;
-    /* margin-bottom: 2rem; */
     text-align: center;
 }
+
+/* ---------- Navigation Bar ---------- */
+
+.navContainer{
+  background-color: rgb(0, 0, 0);
+  padding: 1.6rem;
+  letter-spacing: 0.6;
+  width: 100%;
+  display: grid;
+
+  color: white;
+  font-size: 1em;
+  font-family: 'varelaRound';
+  font-weight: 800;
+
+  text-align: start;
+  letter-spacing: 0.4;
+  /* word-spacing: -4; */
+}
+
+.navItem{
+  display: inline-grid;
+}
+
+/* ---------- Text Container ---------- */
 
 .textContainer{
   background-color: rgb(0, 0, 0);
@@ -66,16 +109,59 @@ h1{
   width: 100%;
   display: inline-block;
   
-  /* border: #ffffff0; */
-  /* border-style: groove; */
-  /* border-width: 1px; */
-  /* border-radius: 12px;    */
-
   color: white;
   font-size: 1em;
   font-family: 'varelaRound';
+  font-weight: 100;
+
   text-align: start;
   letter-spacing: 0.4;
-  font-weight: 100;
   /* word-spacing: -4; */
+}
+
+.textContainer h1{
+  font-family: 'Zilla Slab', serif;
+  font-size: 3rem;
+  font-weight: 800;
+  letter-spacing: 1;
+  color: white;
+}
+
+.textContainer h2{
+  font-family: 'Zilla Slab', serif;
+  font-size: 2rem;
+  font-weight: 600;
+  letter-spacing: 1;
+  color: white;
+}
+
+.textContainer h3{
+  font-family: 'Zilla Slab', serif;
+  font-weight: 700;
+  font-size: 1.6em;
+  color: white;
+}
+
+/* ---------- FOOTER ---------- */
+
+footer{
+    background-color: black;
+    color: aliceblue;
+    width: 100%;
+    height: 10vh;
+    padding: 20px;
+    margin-top: 6rem;
+
+    left: 0;
+    bottom: 0;
+}
+
+footer *{
+    text-align: center;
+    font-family: varelaRound;
+    text-decoration: none;
+}
+
+footer a:visited{
+  color: aliceblue;
 }
