--- a/src/css/app/app.css
+++ b/src/css/app/app.css
@@ -3,7 +3,6 @@
   width: 10rem;
 }
 
-
 .titleContainer {
   /* background-color: darkblue; */
     margin-bottom: 0.2rem;
@@ -14,6 +13,15 @@
     font-weight: 800;
     letter-spacing: 1;
     color: black;
+}
+
+.pageTitleContainer {
+  text-align: center;
+  margin: 1rem;
+}
+
+.pageTextContainer {
+  text-align: center;
 }
 
 .sectionContainer{
