--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -79,17 +79,18 @@ h3{
 
 /* ---------- Navigation Bar ---------- */
 
-.navContainer{
-  background-color: rgb(0, 0, 0);
+.navTitle{
+  /* background-color: rgb(0, 0, 0); */
   padding: 1.6rem;
   letter-spacing: 0.6;
   width: 100%;
   display: grid;
 
-  color: white;
-  font-size: 1em;
-  font-family: 'varelaRound';
-  font-weight: 800;
+  color: black;
+  font-size: 1.8em;
+  /* font-family: 'varelaRound'; */
+  font-family: 'Zilla Slab';
+  font-weight: 600;
 
   text-align: start;
   letter-spacing: 0.4;
@@ -110,7 +111,7 @@ h3{
   display: inline-block;
   
   color: white;
-  font-size: 1em;
+  font-size: 1.2em;
   font-family: 'varelaRound';
   font-weight: 100;
 
