--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -149,18 +149,25 @@ footer{
     background-color: black;
     color: aliceblue;
     width: 100%;
-    height: 10vh;
-    padding: 20px;
+    height: 6rem;
     margin-top: 6rem;
 
     left: 0;
     bottom: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 footer *{
     text-align: center;
     font-family: varelaRound;
     text-decoration: none;
+}
+
+footer a{
+  margin-right: 8px;
 }
 
 footer a:visited{
